--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": " Projeto de site para fazer perguntas",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "nodemon .",
+    "init-db": "node src/db/init.js"
   },
   "repository": {
     "type": "git",
